@@ -336,12 +336,13 @@ be finalized; only the internally used file object will be closed. See the
       dots ``".."``.
 
 
-.. method:: TarFile.extract(member, path="")
+.. method:: TarFile.extract(member, path="", set_attrs=True)
 
    Extract a member from the archive to the current working directory, using its
    full name. Its file information is extracted as accurately as possible. *member*
    may be a filename or a :class:`TarInfo` object. You can specify a different
-   directory using *path*.
+   directory using *path*. File attributes (owner, mtime, mode) are set unless
+   *set_attrs* is False.
 
    .. note::
 
@@ -352,6 +353,8 @@ be finalized; only the internally used file object will be closed. See the
 
       See the warning for :meth:`extractall`.
 
+   .. versionchanged:: 3.2
+      Added the *set_attrs* parameter.
 
 .. method:: TarFile.extractfile(member)
 
